--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -19,7 +19,7 @@
   -->
 
 <resources>
-    <string name="Activated">활성화됨</string>
+    <string name="Activated">%s 활성화됨</string>
     <string name="Install">설치</string>
     <string name="InstallDetail">LSPosed를 설치하려면 누르세요</string>
     <string name="Modules">모듈</string>
