--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -20,7 +20,7 @@
 
 <resources>
     
-    
+
     <!-- MainActivity -->
     <string name="info">資訊</string>
     <string name="Activated">%s 已啟用</string>
@@ -43,7 +43,7 @@
     <string name="selinux_permissive_summary">SELinux 未處於嚴格模式！</string>
     
     
-    
+
     <!-- LogsActivity -->
     <string name="menuSend">傳送</string>
     <string name="menuSaveToSd">儲存</string>
@@ -60,6 +60,7 @@
     <string name="logs_cannot_read">無法讀取日誌: \n</string>
     <string name="menuReload">重新載入</string>
     <string name="logs_clear_failed_2">日誌清理失敗</string>
+    <string name="not_logcat_2">如果有人要求您提供一份 Android 系統日誌，那麼您來錯了地方。在此處顯示的是 LSPosed 的日誌；如果您想抓取系統日誌，可前往 XDA 尋求所需的答案。</string>
 
     <!-- Notification -->
     <string name="module_is_not_activated_yet">LSPosed 模組尚未啟用</string>
@@ -163,4 +164,5 @@
     <string name="app_destroyed">此應用程式已損毀，請確保您從官方來源下載該應用程式。</string>
     <string name="outdated_manager">LSPosed Manager 和 LSPosed 核心的版本不一致。請重新安裝對應的版本。</string>
     <string name="lsposed_not_active">LSPosed 未正確安裝或啟用。</string>
+    <string name="verbose_log_not_avaliable">詳細日誌不可用，如果您只是啟用了它而沒有重新啟動，請在重新啟動後再試一次。</string>
 </resources>
