--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -19,85 +19,69 @@
   -->
 
 <resources>
+    <!-- MainActivity -->
+    <string name="info">정보</string>
     <string name="Activated">%s 활성화됨</string>
     <string name="Install">설치</string>
-    <string name="InstallDetail">LSPosed를 설치하려면 누르세요</string>
+    <string name="InstallDetail">LSPosed를 설치하려면 탭</string>
     <string name="Modules">모듈</string>
+    <plurals name="modules_enabled_count">
+        <item quantity="one">모듈 %d개 활성화됨</item>
+        <item quantity="other">모듈 %d개 활성화됨</item>
+    </plurals>
     <string name="Logs">로그</string>
     <string name="Settings">설정</string>
     <string name="About">About</string>
+    <string name="module_repo">저장소</string>
+    <string name="module_repo_summary">모듈 저장소 (Alpha)</string>
+    <string name="about_view_source_code"><![CDATA[%s에서 소스 코드 보기<br/>%s 채널에 가입하십시오.]]></string>
 
-    <!-- General/various strings -->
+    <string name="not_installed">설치되지 않음</string>
+    <string name="selinux_permissive">&lt;b&gt;경고:&lt;\/b&gt; SELinux가 시행되고 있지 않습니다! 이 취약성을 공격하는 악성 프로그램은 장치를 완전히 제어할 수 있으며 재산상의 손해와 법적 책임을 초래할 수 있습니다.</string>
+    <string name="selinux_permissive_summary">SELinux가 시행되고 있지 않습니다!</string>
+
+    <!-- LogsActivity -->
     <string name="menuSend">전송</string>
     <string name="menuSaveToSd">저장</string>
-
-    <!-- Welcome screen / main sections -->
-
-    <!-- navigation view items -->
     <string name="nav_item_logs">상세 로그</string>
     <string name="nav_item_logs_err">모듈 로그</string>
-
-    <!-- Installer tab -->
     <string name="dont_show_again">다시 표시 안 함</string>
+    <string name="logs_save_failed">저장 실패:</string>
+    <string name="menuClearLog">로그 지우기</string>
+    <string name="logs_cleared">로그를 성공적으로 지웠습니다.</string>
+    <string name="log_is_empty">로그가 비어 있습니다.</string>
+    <string name="scroll_top">맨 위로 스크롤</string>
+    <string name="loading">로딩 중…</string>
+    <string name="scroll_bottom">아래로 스크롤</string>
+    <string name="logs_cannot_read">로그를 읽지 못함: \n</string>
+    <string name="menuReload">리로드</string>
+    <string name="logs_clear_failed_2">로그를 지우지 못했습니다.</string>
+    <string name="not_logcat_2">다른 사용자가 Android Logcat을 요청했다면 섹션이 잘못되어 있습니다. 이것은 LSPosed 로그입니다. logcat이 필요한 경우 XDA에서 필요한 정보를 찾을 수 있습니다.</string>
 
-    <!-- File operations -->
-
-    <!-- Modules tab -->
+    <!-- Notification -->
     <string name="module_is_not_activated_yet">LSPosed 모듈이 아직 활성화되지 않았습니다.</string>
     <string name="module_is_not_activated_yet_detailed">%s이(가) 설치되었지만 아직 활성화되지 않았습니다.</string>
-    <string name="module_empty_description">(설명이 없습니다.)</string>
+    <string name="xposed_module_updated_notification_content">%s이(가) 업데이트되었습니다.</string>
+
+    <!-- ModulesActivity -->
+    <string name="module_empty_description">(설명 없음)</string>
     <string name="module_no_ui">이 모듈은 사용자 인터페이스를 제공하지 않습니다.</string>
     <string name="xposed_module_updated_notification_title">LSPosed 모듈 업데이트</string>
     <string name="warning_xposed_min_version">이 모듈에는 최신 LSPosed (%d) 버전이 필요하므로 활성화할 수 없습니다.</string>
     <string name="no_min_version_specified">이 모듈에서는 필요한 LSPosed 버전을 지정하지 않습니다.</string>
     <string name="warning_min_version_too_low">이 모듈은 LSPosed 버전 %1$d에 대해 생성되었지만 버전 %2$d에서 호환되지 않는 변경으로 인해 비활성화되었습니다.</string>
-    <string name="modules_app_store">앱 스토어에서 보기</string>
-    <string name="module_app_info">앱 정보</string>
-    <string name="module_uninstall">제거</string>
-
-    <!-- Download tab -->
-    <string name="menuReload">리로드</string>
-
-    <!-- Settings tab -->
-    <string name="settings_group_framework">Framework</string>
-    <string name="settings_enable_resources">resource hooks 사용</string>
-    <string name="settings_enable_resources_summary"><b>주의:</b> 리소스 후크가 사용되지 않습니다.</string>
-
-    <!-- Support tab -->
-
-    <!-- Logs tab  -->
-    <string name="logs_save_failed">저장하지 못했습니다.:</string>
-    <string name="menuClearLog">지금 로그 지우기</string>
-    <string name="logs_cleared">로그를 성공적으로 지웠습니다.</string>
-    <string name="log_is_empty">로그가 비어 있습니다.</string>
-
-    <!-- About tab -->
-
-    <!-- DownloadView -->
-
-    <!-- DownloadUtils -->
-
-    <!-- RepoLoader -->
-
     <string name="warning_installed_on_external_storage">이 모듈은 SD 카드에 설치되어 있으므로 로드할 수 없습니다. 내부 스토리지로 이동하십시오.</string>
+    <string name="module_uninstall">제거</string>
+    <string name="module_settings">모듈 설정</string>
+    <string name="view_in_repo">저장소에서 보기</string>
 
-    <string name="info">정보</string>
-
-    <string name="scroll_top">맨 위로 스크롤</string>
-    <string name="loading">로딩 중…</string>
-    <string name="scroll_bottom">아래로 스크롤</string>
-
-    <!-- LSPd related -->
+    <!-- AppListActivity -->
+    <string name="compile_speed">다시 최적화</string>
     <string name="compile_speed_msg">최적화 중…</string>
     <string name="compile_done">최적화 완료</string>
-
-    <string name="pref_title_disable_verbose_log">상세 로그 사용 안 함</string>
-    <string name="logs_cannot_read">로그를 읽을 수 없습니다.: \n</string>
-    <string name="app_launch">시작</string>
+    <string name="app_launch">실행</string>
     <string name="compile_failed">최적화에 실패했거나 반환 값이 비어 있습니다.</string>
     <string name="compile_failed_with_info">최적화 실패: </string>
-    <string name="not_installed">설치되지 않음</string>
-    <string name="pure_black_dark_theme">순수한 검정색 테마 사용</string>
     <string name="sort_by_name">응용 프로그램 이름별로 정렬</string>
     <string name="sort_by_name_reverse">응용 프로그램 이름별로 정렬 (역순)</string>
     <string name="sort_by_package_name">패키지 이름별로 정렬</string>
@@ -106,29 +90,42 @@
     <string name="sort_by_install_time_reverse">설치 시간별로 정렬 (역순)</string>
     <string name="sort_by_update_time">업데이트 시간별로 정렬</string>
     <string name="sort_by_update_time_reverse">업데이트 시간별로 정렬 (역순)</string>
-    <string name="settings_group_theme">테마</string>
-    <string name="settings_variant">Variant</string>
     <string name="menu_show_system_apps">시스템 앱</string>
-    <string name="menu_sort">정렬 중…</string>
+    <string name="menu_sort">정렬…</string>
     <string name="enable_module">모듈 활성화</string>
     <string name="no_scope_selected">앱을 선택하지 않았습니다. 계속하시겠습니까?</string>
     <string name="menu_show_games">게임</string>
     <string name="menu_show_modules">모듈</string>
     <string name="failed_to_save_scope_list">범위 목록 저장에 실패했습니다.</string>
-    <string name="module_settings">모듈 설정</string>
-    <string name="app_description">%s\n버전: %s</string>
-    <string name="use_recommended">권장</string>
+    <string name="app_description">%s\n버전 %s</string>
+    <string name="use_recommended">권장된</string>
     <string name="no_scope_selected_has_recommended">앱을 선택하지 않았습니다. 권장 앱을 선택하시겠습니까?</string>
     <string name="use_recommended_message">권장 앱을 선택하시겠습니까?</string>
     <string name="requested_by_module">권장된</string>
-    <string name="module_disabled_no_selection">앱을 선택하지 않았기 때문에 모듈 %s이(가) 비활성화되었습니다.</string>
+    <string name="module_disabled_no_selection">앱을 선택하지 않았기 때문에 %s 모듈이 비활성화되었습니다.</string>
     <string name="android_framework">System Framework</string>
-    <string name="app_destroyed">이 응용 프로그램이 삭제되었습니다. 공식 소스에서 다운로드했는지 확인하십시오.</string>
-    <string name="compile_speed">다시 최적화</string>
-    <string name="selinux_permissive">&lt;b&gt;경고:&lt;\/b&gt; SELinux가 시행되고 있지 않습니다! 이 취약성을 공격하는 악성 프로그램은 장치를 완전히 제어할 수 있으며 재산 상의 손해와 법적 책임을 초래할 수 있습니다.</string>
-    <string name="selinux_permissive_summary">SELinux가 시행되고 있지 않습니다!</string>
-    <string name="outdated_manager">LSPosed Manager 및 LSPosed Core 버전이 일치하지 않습니다. 해당 버전을 다시 설치하십시오.</string>
-    <string name="lsposed_not_active">LSPosed가 현재 설치되어 있지 않거나 활성화되어 있지 않습니다.</string>
+    <string name="menu_backup_and_restore">백업…</string>
+    <string name="menu_backup">백업</string>
+    <string name="menu_restore">복원</string>
+    <string name="force_stop">강제 중지</string>
+    <string name="force_stop_dlg_title">강제 정지?</string>
+    <string name="force_stop_dlg_text">앱을 강제로 중지하면 잘못된 동작이 발생할 수 있습니다.</string>
+    <string name="reboot_required">이 변경 내용을 적용하려면 재부팅해야 합니다.</string>
+    <string name="reboot">재부팅</string>
+
+    <!-- ModulesActivity and AppListActivity -->
+    <string name="modules_app_store">앱 스토어에서 보기</string>
+    <string name="module_app_info">앱 정보</string>
+
+    <!-- SettingsActivity -->
+    <string name="settings_group_framework">Framework</string>
+    <string name="settings_enable_resources">리소스 후크 사용</string>
+    <string name="settings_enable_resources_summary"><b>경고:</b> 리소스 후크가 사용되지 않습니다.</string>
+    <string name="pref_title_disable_verbose_log">상세 로그 사용 안 함</string>
+    <string name="pure_black_dark_theme">블랙 다크 테마</string>
+    <string name="pure_black_dark_theme_summary">다크 테마가 활성화된 경우 순수 검은색 테마를 사용합니다.</string>
+    <string name="settings_group_theme">테마</string>
+    <string name="settings_variant">Variant</string>
     <string name="settings_backup_and_restore">백업 및 복원</string>
     <string name="settings_backup_and_restore_summery">모듈 목록 및 범위 목록을 백업 또는 복원합니다.</string>
     <string name="settings_backup">백업</string>
@@ -137,28 +134,29 @@
     <string name="settings_backup_failed">백업 실패</string>
     <string name="settings_restore">복원</string>
     <string name="settings_restoring">복원 중…</string>
-    <string name="settings_restore_success">복원 완료!</string>
+    <string name="settings_restore_success">복원 완료!!</string>
     <string name="settings_restore_failed">복원 실패</string>
-    <string name="menu_backup_and_restore">백업…</string>
-    <string name="menu_backup">백업</string>
-    <string name="menu_restore">복원</string>
-    <string name="xposed_module_updated_notification_content">%s이(가) 업데이트되었습니다.</string>
-    <string name="module_repo">저장소</string>
-    <string name="module_repo_summary">모듈 저장소 (Alpha)</string>
-    <string name="module_readme">읽어주세요</string>
+    <string name="group_network">네트워크</string>
+    <string name="dns_over_http">DNS over HTTPS</string>
+    <string name="dns_over_http_summary">일부 국가의 DNS 포이즈닝 문제를 해결합니다</string>
+    <string name="theme_color">테마 색</string>
+
+    <!-- Module Repo -->
+    <string name="module_readme">Readme</string>
     <string name="module_releases">Releases</string>
     <string name="module_information">정보</string>
     <string name="module_information_homepage">홈페이지</string>
     <string name="module_information_source_url">소스 코드</string>
     <string name="module_information_collaborators">기여자</string>
-    <string name="module_release_view_assets">에셋</string>
+    <string name="module_release_view_assets">Assets</string>
     <string name="menu_open_in_browser">브라우저에서 열기</string>
-    <string name="refresh">새로 고침</string>
-    <string name="group_network">네트워크</string>
-    <string name="dns_over_http">DNS over HTTPS</string>
-    <string name="dns_over_http_summary">일부 국가의 DNS 포이즈닝 문제를 해결합니다.</string>
-    <string name="about_view_source_code"><![CDATA[%s에서 소스 코드 보기<br/>%s 채널에 가입하십시오.]]></string>
+    <string name="refresh">새로고침</string>
     <string name="module_release_load_more">이전 버전 표시</string>
-    <string name="module_release_no_more">release 더 없음</string>
-    <string name="theme_color">테마 색상</string>
+    <string name="module_release_no_more">No more release</string>
+
+
+    <string name="app_destroyed">이 응용 프로그램이 삭제되었습니다. 공식 소스에서 다운로드했는지 확인하십시오.</string>
+    <string name="outdated_manager">LSPosed Manager 및 LSPosed Core 버전이 일치하지 않습니다. 해당 버전을 다시 설치하십시오.</string>
+    <string name="lsposed_not_active">LSPosed가 현재 설치되어 있지 않거나 활성화되어 있지 않습니다.</string>
+    <string name="verbose_log_not_avaliable">상세 로그를 사용할 수 없습니다. 재부팅하지 않고 방금 사용하도록 설정한 경우 재부팅 후 다시 시도하십시오.</string>
 </resources>
