[app] Uninstall app with binder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,9 @@
     <string name="module_uninstall">Uninstall</string>
     <string name="module_settings">Module settings</string>
     <string name="view_in_repo">View in Repo</string>
+    <string name="module_uninstall_message">Do you want to uninstall this module?</string>
+    <string name="module_uninstalled">Uninstalled %1$s</string>
+    <string name="module_uninstall_failed">Uninstall unsuccessful</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">Re-optimize</string>
